# wldroid

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONSUMING.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
.github/workflows/: ci.yml  native-build.yml  release.yml  snapshot.yml
compositor/: build.gradle.kts
compositor/native/: meson.build
compositor/native/builddir-cross/: android-aarch64.ini  native.ini
compositor/native/scripts/: build.sh
compositor/native/src/: ahb_allocator.c  ahb_allocator.h  ahb_registry.c  ahb_registry.h  ahb_registry_receiver.c  ahb_registry_receiver.h  android_backend.c  android_backend.h  android_output.c  android_output.h  compositor_server.c  compositor_server.h  drm_format_table.h  input_handler.c  input_handler.h  jni_bridge.c  keycode_map.h  meson.build  test_client.c  test_client.h  text_input_handler.c  text_input_handler.h  xwayland_surface.c  xwayland_surface.h
compositor/native/subprojects/: libdrm.wrap  libxau.wrap  libxcb.wrap  wayland.wrap  wlroots.wrap  xcb-proto.wrap  xcb-util-wm.wrap  xorgproto.wrap
compositor/native/subprojects/packagefiles/libxau/: meson.build
compositor/native/subprojects/packagefiles/libxcb/: meson.build
compositor/native/subprojects/packagefiles/wayland/: relax-scanner-version.patch
compositor/native/subprojects/packagefiles/xcb-proto/: meson.build
compositor/native/subprojects/packagefiles/xcb-util-wm/: meson.build
compositor/native/tests/: meson.build  test_client.c  test_drm_format.c  test_harness.h  test_keycode_map.c  test_ring_buffer.c  test_toplevel_tracking.c
compositor/native/tests/stubs/android/: hardware_buffer.h
compositor/src/androidTest/java/nu/shel/wldroid/compositor/: CompositorInputTest.kt  CompositorServerTest.kt
compositor/src/androidTest/java/nu/shell/wldroid/compositor/: CompositorInputTest.kt  CompositorServerTest.kt
compositor/src/main/java/nu/shel/wldroid/compositor/: CompositorConfig.kt  CompositorInput.kt  CompositorServer.kt  CompositorSession.kt  CompositorState.kt  XkbExtractor.kt
compositor/src/main/java/nu/shell/wldroid/compositor/: CompositorConfig.kt  CompositorInput.kt  CompositorServer.kt  CompositorSession.kt  CompositorState.kt  XkbExtractor.kt
compositor/src/test/java/nu/shel/wldroid/compositor/: CompositorConfigTest.kt  CompositorInputTest.kt  CompositorSessionTest.kt  CompositorStateTest.kt  XkbExtractorTest.kt
compositor/src/test/java/nu/shell/wldroid/compositor/: CompositorConfigTest.kt  CompositorInputTest.kt  CompositorSessionTest.kt  CompositorStateTest.kt  XkbExtractorTest.kt
docker/: Dockerfile  build-env.sh  docker-compose.yml
docs/: api-reference.md  build-system.md  compositor-architecture.md  development.md  gpu-rendering.md  integration-guide.md  migration-guide.md  shims.md  testing.md
gradle/: libs.versions.toml  publishing.gradle.kts
launcher/: build.gradle.kts
launcher/src/main/: AndroidManifest.xml
launcher/src/main/assets/scripts/: launch-app.sh  setup-gpu.sh
launcher/src/main/java/nu/shel/wldroid/launcher/: CompositorConfigFactory.kt  DesktopAppPreset.kt  DesktopLauncher.kt  DesktopLauncherConfig.kt  DesktopLauncherState.kt  DesktopSession.kt  GpuEnvironmentConfig.kt  GpuSetupConfig.kt  GpuSetupManager.kt  LaunchScriptManager.kt  PackageInstaller.kt  PhantomProcessDetector.kt  WldroidService.kt  WldroidServiceState.kt  XWaylandConfig.kt  XWaylandManager.kt  XWaylandReadyResult.kt
launcher/src/main/java/nu/shell/wldroid/launcher/: CompositorConfigFactory.kt  DesktopAppPreset.kt  DesktopLauncher.kt  DesktopLauncherConfig.kt  DesktopLauncherState.kt  DesktopSession.kt  GpuEnvironmentConfig.kt  GpuSetupConfig.kt  GpuSetupManager.kt  LaunchScriptManager.kt  PackageInstaller.kt  XWaylandConfig.kt  XWaylandManager.kt  XWaylandReadyResult.kt
launcher/src/test/java/nu/shel/wldroid/launcher/: CompositorConfigFactoryTest.kt  DesktopAppPresetTest.kt  DesktopLauncherStateTest.kt  DesktopSessionTest.kt  GpuEnvironmentConfigTest.kt  GpuSetupManagerTest.kt  LaunchScriptManagerTest.kt  WldroidServiceStateTest.kt  XWaylandConfigTest.kt  XWaylandManagerTest.kt
launcher/src/test/java/nu/shell/wldroid/launcher/: CompositorConfigFactoryTest.kt  DesktopAppPresetTest.kt  DesktopLauncherStateTest.kt  DesktopSessionTest.kt  GpuEnvironmentConfigTest.kt  GpuSetupManagerTest.kt  LaunchScriptManagerTest.kt  XWaylandConfigTest.kt  XWaylandManagerTest.kt
proot/: build.gradle.kts
proot/native/: build-proot.sh
proot/native/patches/: 001-fix-implicit-declarations.patch
proot/src/androidTest/java/nu/shel/wldroid/proot/: ProotDnsManagerTest.kt  ProotExecutorTest.kt  RootfsManagerTest.kt
proot/src/androidTest/java/nu/shell/wldroid/proot/: ProotDnsManagerTest.kt  ProotExecutorTest.kt  (+1 more)
scripts/: build-all-native.sh  check-dev-environment.sh  run-emulator.sh  setup-emulator.sh  setup-meson-subprojects.sh
shims/: build.gradle.kts
shims/docker/: Dockerfile  build-all.sh  docker-compose.yml
shims/native/drm-shim/: README.md  build-drm-shim.sh  build-drm-wrapper.sh  meson.build  meson_options.txt
shims/native/drm-shim/include/: drm_shim.h
shims/native/drm-shim/src/: drm_shim.c
shims/native/drm-shim/tests/: run_tests.sh  test_common.h  test_drm_devices.c  test_drm_prime.c  test_drm_version.c
shims/native/drm-shim/vendor-include/: README.md
shims/native/egl-override/: build-egl-override.sh  egl_override.c
shims/native/gbm-shim/: README.md  build-gbm-shim.sh  meson.build  meson_options.txt
shims/native/gbm-shim/include/: gbm.h
shims/native/gbm-shim/src/: gbm_ahb.c  gbm_ahb_formats.c  gbm_ahb_formats.h
shims/native/gbm-shim/tests/: ahb_mock.c  run_tests.sh  test_common.h  test_gbm_bo.c  test_gbm_device.c  test_gbm_formats.c  test_gbm_map.c
shims/native/gbm-shim/vendor-include/android/: hardware_buffer.h  log.h
shims/native/netstub/: build-netstub.sh  netstub.c
testapp/: build.gradle.kts
testapp/src/main/: AndroidManifest.xml
ui/: build.gradle.kts
virgl/: build.gradle.kts
virgl/native/: build-virgl.sh
(+155 files in other folders)
